--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     [ 'Advocacia', 2000 ]
                     ])
                     const options = {
-                        title: 'Dragon Ball Z - Characters Ki',
+                        title: 'Profissões em alta',
                         height: 400,
                         width: 720
                     }
